2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance bad gradient class.
	* include/roboptim/core/finite-difference-gradient.hh,
	* src/finite-difference-gradient.cc: Store and display
	in which component is the greated delta between
	finite difference and analytical gradients.

2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.
	* tests/atlocal.in: Pass version to test suite
	as required by autotest.at.

2009-10-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Here.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* build-aux: Synchronize.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Update NEWS file.
	* NEWS: Here.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Run autoupdate.
	* configure.ac: Updated by autoupdate.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Respect 80-columns rule.
	* include/roboptim/core/debug.hh,
	* include/roboptim/core/derivable-function.hh,
	* include/roboptim/core/finite-difference-gradient.hh,
	* include/roboptim/core/finite-difference-gradient.hxx,
	* include/roboptim/core/generic-solver.hh,
	* include/roboptim/core/n-times-derivable-function.hh,
	* include/roboptim/core/parametrized-function.hxx,
	* include/roboptim/core/problem.hxx,
	* include/roboptim/core/solver-error.hh,
	* include/roboptim/core/util.hh,
	* src/debug.cc,
	* src/doc.hh,
	* src/finite-difference-gradient.cc,
	* tests/Makefile.am,
	* tests/plugin.cc: Clean to make text fit on 80 columns.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Simplify version updating in autotest.mk.
	* build-aux: Synchronize.
	* tests/atlocal.in: Simplify.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove obsolete information from README.
	* README: Here.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Add URL information.
	* configure.ac: Here.

2009-09-25  Thomas Moulard  <thomas.moulard@gmail.com>
