@@ -1,5 +1,11 @@
 2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Synchronize.
+	* Makefile.am: Include ``build-aux/git-version-gen.mk''.
+	* build-aux: Synchronize.
+
+2009-10-06  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Enhance bad gradient class.
 	* include/roboptim/core/finite-difference-gradient.hh,
 	* src/finite-difference-gradient.cc: Store and display
